--- a/file1.html
+++ b/file1.html
@@ -3,23 +3,22 @@
 <head>
     <style>
         /* CSS untuk styling navbar */
-        ul.navbar {
-            list-style-type: none;
+        *{
+            margin: 0;
+            padding: 0;
+        }
+        div.navbar {
             margin: 0;
             padding: 0;
             background-color: #bf6789;
-            overflow: hidden;
-            display: flex; /* Membuat navbar menjadi flex container */
-            justify-content: space-between; /* Mengatur elemen di dalam navbar agar terdistribusi secara rata */
-            align-items: center; /* Mengatur elemen secara vertikal di tengah */
             height: 20vh; /* Mengurangi tinggi navbar */
         }
 
-        ul.navbar li {
+        div.navbar div {
             float: left;
         }
 
-        ul.navbar li a {
+        div.navbar div a {
             display: block;
             color: white;
             text-align: center;
@@ -27,7 +26,7 @@
             text-decoration: none;
         }
 
-        ul.navbar li a:hover {
+        div.navbar div a:hover {
             background-color: #bf6789;
         }
 
@@ -44,22 +43,37 @@
 
         /* CSS untuk styling shopping cart icon */
         .shopping-cart {
+            position: absolute;
+            right: 0;
+            top: 0;
             margin-right: 20px; /* Jarak dari ujung kanan */
+        }
+        .center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .column-center {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
         }
     </style>
 </head>
 <body>
 
-<ul class="navbar">
-    <img src="logo.png" alt="Logo" style="width: 100px;"> <!-- Menyesuaikan ukuran logo -->
-    <li class="search-bar">
-        <input type="text" placeholder="Search">
-        <button type="submit">Search</button>
-    </li>
-    <li class="shopping-cart">
-        <a href="#"><img src="shopping-cart-icon.png" alt="Shopping Cart" style="width: 30px;"></a> <!-- Ganti "shopping-cart-icon.png" dengan gambar ikon keranjang belanja Anda -->
-    </li>
-</ul>
-
+<div class="navbar center">
+    <div class="column-center">
+        <img src="logo.png" alt="Logo" style="width: 100px;"> <!-- Menyesuaikan ukuran logo -->
+        <div class="search-bar">
+            <input type="text" placeholder="Search">
+            <button type="submit">Search</button>
+        </div>        
+    </div>
+    <div class="shopping-cart"> 
+        <img src="shopping-cart-icon.png" alt="Shopping Cart" style="width: 30px;">
+    </div>
+</div>
 </body>
 </html>
